fix collapse view

--- a/wine/static/wine/style.css
+++ b/wine/static/wine/style.css
@@ -72,13 +72,7 @@ font-size: 10px;
 font-size: 14px;
 }
 
-td.wineDetail {
-padding-left: 50px;
-background-clip: border-box;
-border: 1px solid rgba(0,0,0,.125);
-border-top-color: rgba(0, 0, 0, 0.125);
-border-style: solid;
-border-left-width: 3px;
-border-top-width: 1px;
-border-radius: .25rem;
+.hiddenRow {
+    padding: 0 !important;
+    border: none;
 }
